bitnami/monitoring/monitoring-main/kpt2/loki/templates/service-headless.yaml
---
# Source: monitoring/charts/loki/templates/service-headless.yaml
apiVersion: v1
kind: Service
metadata:
  name: monitoring-loki-headless
  namespace: monitoring
  labels:
    app: loki
    chart: loki-2.10.1
    release: monitoring
    heritage: Helm
    variant: headless
spec:
  clusterIP: None
  ports:
    - port: 3100
      protocol: TCP
      name: http-metrics
      targetPort: http-metrics
  selector:
    app: loki
    release: monitoring
