bitnami/monitoring/monitoring-main/kpt2/loki/templates/service.yaml
---
# Source: monitoring/charts/loki/templates/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: monitoring-loki
  namespace: monitoring
  labels:
    app: loki
    chart: loki-2.10.1
    release: monitoring
    heritage: Helm
  annotations:
    {}
spec:
  type: ClusterIP
  ports:
    - port: 3100
      protocol: TCP
      name: http-metrics
      targetPort: http-metrics
  selector:
    app: loki
    release: monitoring
